<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jams</groupId>
    <artifactId>jams-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>JAMS - Jena Adaptable Modelling System</name>

    <modules>
        <module>jams-api</module>
        <module>jams-main</module>
        <module>jams-common</module>
        <module>jams-components</module>
        <module>jams-democomponents</module>
        <module>jams-optas</module>
        <module>jams-cloud-core</module>
        <module>jams-cloud-client</module>
        <module>jams-worldwind</module>
        <module>jams-explorer</module>
        <module>jams-ui</module>
        <module>jams-test</module>
        <module>jams-starter</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Java 17: von GeoTools 33 vorausgesetzt (WorldWind braucht min. 11) -->
        <maven.compiler.release>17</maven.compiler.release>
        <geotools.version>33.5</geotools.version>
        <jts.version>1.20.0</jts.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.locationtech.jts</groupId>
                <artifactId>jts-core</artifactId>
                <version>${jts.version}</version>
            </dependency>
            <!-- von GeoTools 33 benoetigt (JavaVersion.JAVA_9 ff.); loest den
                 Konflikt mit dem alten lokalen commons-lang3-3.1 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.17.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <!-- Projekt-lokales Repository mit den eingecheckten JARs.
             ${maven.multiModuleProjectDirectory} zeigt immer auf die Repo-Wurzel,
             damit der Pfad auch aus den Modulen heraus stimmt. -->
        <repository>
            <id>jams-libs-repo</id>
            <url>file://${maven.multiModuleProjectDirectory}/libs-repo</url>
            <!-- keine .sha1-Dateien im Repo; Checksumpruefung ist fuer ein
                 eingechecktes, versioniertes lokales Repo ohnehin ohne Mehrwert -->
            <releases><enabled>true</enabled><checksumPolicy>ignore</checksumPolicy></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
        <!-- modernes GeoTools 33 (nicht auf Maven Central) -->
        <repository>
            <id>osgeo</id>
            <url>https://repo.osgeo.org/repository/release/</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>

    <build>
        <!-- NetBeans-Layout beibehalten: Ressourcen (Bilder, .properties,
             ResourceBundles) liegen neben den Java-Quellen in src/main/java.
             Alles ausser *.java wird als Ressource ins JAR uebernommen. -->
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <!-- macOS-AppleDouble-Sidecars (exFAT) nicht ins JAR kopieren -->
                    <exclude>**/._*</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/._*</exclude>
                </excludes>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <!-- macOS-AppleDouble-Sidecars (._Foo.java auf exFAT-
                             Volumes) matchen **/*.java und wuerden javac
                             zum Absturz bringen -->
                        <excludes>
                            <exclude>**/._*.java</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
